WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108152
Fix a problem that deferred image decoding is enabled for multiframe images
https://bugs.webkit.org/show_bug.cgi?id=108152
Summary
Fix a problem that deferred image decoding is enabled for multiframe images
Min Qin
Reported
2013-01-28 22:47:30 PST
Fix a problem that deferred image decoding is enabled for multiframe images
Attachments
Patch
(1.90 KB, patch)
2013-01-28 22:54 PST
,
Min Qin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Min Qin
Comment 1
2013-01-28 22:54:36 PST
Created
attachment 185167
[details]
Patch
Stephen White
Comment 2
2013-01-29 10:34:18 PST
Comment on
attachment 185167
[details]
Patch OK. r=me
WebKit Review Bot
Comment 3
2013-01-29 11:11:20 PST
Comment on
attachment 185167
[details]
Patch Clearing flags on attachment: 185167 Committed
r141135
: <
http://trac.webkit.org/changeset/141135
>
WebKit Review Bot
Comment 4
2013-01-29 11:11:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug