Fix a problem that deferred image decoding is enabled for multiframe images https://bugs.webkit.org/show_bug.cgi?id=108152

Patch by Min Qin <qinmin@chromium.org> on 2013-01-29
Reviewed by Stephen White.

Deferred image decoding should only work for single frame images now.
However, using ImageDecoder::repetitionCount() does not capture all the cases.
Enforce the rule using ImageDecoder::frameCount()==1.
Fixing a failing layout test: platform/chromium/virtual/deferred/fast/images/icon-0colors.html

* platform/graphics/chromium/DeferredImageDecoder.cpp:
(WebCore::DeferredImageDecoder::frameBufferAtIndex):

Canonical link: https://commits.webkit.org/126433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141135 268f45cc-cd09-0410-ab3c-d52691b4dbfc